// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component with custom class matches snapshot 1`] = `
<section
  className="Section CUSTOM_CLASS"
/>
`;

exports[`Section component with no props matches snapshot 1`] = `
<section
  className="Section"
/>
`;
